--- a/iBach/iBach/Podfile
+++ b/iBach/iBach/Podfile
@@ -6,7 +6,7 @@ target 'iBach' do
   use_frameworks!
     pod 'Alamofire', '~> 4.7'
     pod 'Unbox'
-
+    pod 'AlamofireImage'
 
   # Pods for iBach
 
