Resolving merge conflict #2

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ iBach/iBach/iBach/Classes/Networking/HTTPRequest.swift
 *.xcuserstate
 iBach/iBach/.DS_Store
 .DS_Store
+iBach/iBach/iBach/Classes/Modules/Playlists/Playlists~.storyboard
